# coffee-shop-api

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  TECHNICAL_DESIGN.md  alembic.ini  catalog.md  coffee_shop.db  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 52b4cd9af355_initial.py  5be22fd743cf_add_password_hash_to_users.py  66a4beac4f38_remove_users_table.py  a1b2c3d4e5f6_add_created_at_to_orders.py  b05e4161aaaa_add_idempotency_keys_table.py  b309f8d40e61_add_users_table.py  c1d2e3f4a5b6_add_user_id_to_orders.py  d4e5f6a7b8c9_create_revoked_tokens_table.py  e1f2a3b4c5d6_float_to_numeric.py
scripts/: run_tests.sh
src/: main.py
src/core/: exceptions.py
src/core/entities/: __init__.py  menu_item.py  order.py  order_detail.py  order_item.py  product.py  user.py
src/core/enums/: __init__.py  order_status.py  role.py
src/core/repositories/: __init__.py  idempotency_repository.py  order_repository.py  product_repository.py  revoked_token_repository.py  user_repository.py
src/core/services/: __init__.py  abstract_notification_service.py  abstract_payment_service.py
src/infrastructure/: redis_client.py  settings.py
src/infrastructure/api/: dependencies.py
src/infrastructure/auth/: jwt.py  password.py
src/infrastructure/database/: connection.py  seed.py
src/infrastructure/services/: __init__.py  circuit_breaker.py  notification_service.py  payment_service.py  redis_notification_service.py
src/infrastructure/tasks/: notification_worker.py  purge_expired.py
src/use_cases/order/: __init__.py  create_order.py  get_order.py  get_order_detail.py  list_orders.py  update_order_status.py
src/use_cases/product/: __init__.py  get_menu.py  (+5 more)
tests/integration/: conftest.py  test_auth_endpoints.py  test_healthcheck.py  test_idempotency.py  test_menu_endpoint.py  test_order_endpoints.py  test_revocation.py  test_user_endpoints.py
tests/unit/: test_circuit_breaker.py  test_create_order_use_case.py  test_get_menu_use_case.py  test_list_orders.py  test_notification_worker.py  test_payment_service.py  test_redis_notification_service.py  test_seed_catalog.py  test_user_use_cases.py
(+27 files in other folders)
