[project]
name = "coffee-shop-fastapi"
version = "0.1.0"
description = "FastAPI implementation of the Coffee Shop challenge."
authors = [
    {name = "Lucas Bittencourt",email = "lucascafieiro@hotmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.135.1,<0.136.0)",
    "databases[aiosqlite] (>=0.9.0,<0.10.0)",
    "alembic (>=1.18.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
