[project]
name = "coffee-shop-fastapi"
version = "0.1.0"
description = "FastAPI implementation of the Coffee Shop challenge."
authors = [
    {name = "Lucas Bittencourt",email = "lucascafieiro@hotmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.135.1,<0.136.0)",
    "databases[aiosqlite] (>=0.9.0,<0.10.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "httpx (>=0.27.0)",
    "pydantic-settings (>=2.0.0)",
    "slowapi (>=0.1.9)",
    "python-jose[cryptography] (>=3.3.0)",
    "bcrypt (>=4.0.0)",
    "redis[asyncio] (>=5.0.0)",
    "tenacity (>=8.0.0)"
]


[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "flake8>=7.0.0",
    "fakeredis>=2.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
